/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

package e2ctypes;

message RICrequestID_t {
    option deprecated = true;
    int64 ricRequestorID = 1;
    int64 ricInstanceID = 2;
}
