/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/

syntax = "proto3";

import "ProtocolIE-Container.proto";

package e2ctypes;

message RICsubscriptionRequest_t {
    ProtocolIE_Container_1544P0_t	 protocolIEs = 1;

}