/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/
syntax = "proto3";

import "RICsubsequentActionType.proto";
import "RICtimeToWait.proto";

package e2ctypes;

message RICsubsequentAction_t {
    RICsubsequentActionType_t ricSubsequentActionType = 1;
    RICtimeToWait_t ricTimeToWait = 2;
}